--- a/neutering-cost.html
+++ b/neutering-cost.html
@@ -1,9 +1,96 @@
-        <div id="mobile-menu" class="hidden absolute top-full left-0 w-full bg-white shadow-lg md:hidden border-t max-h-[80vh] overflow-y-auto">
-          <div class="flex flex-col py-4">
-            <div><button id="mobile-about-btn" class="w-full flex justify-between items-center px-6 py-3 text-slate-800 hover:bg-slate-50 font-medium">병원소개<i data-lucide="chevron-down" class="w-4 h-4 transition-transform" id="mobile-about-icon"></i></button><div id="mobile-about-menu" class="hidden bg-slate-50 border-y border-slate-100"><a href="index.html#greetings" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">인사말</a><a href="clinic-hours.html" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">진료시간안내</a><a href="location.html" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">찾아오시는길</a></div></div>
-            <a href="pricing.html" class="mobile-link px-6 py-3 text-slate-800 hover:bg-slate-50 font-medium">진료비안내</a>
-            <div><button id="mobile-neutering-btn" class="w-full flex justify-between items-center px-6 py-3 text-slate-800 hover:bg-slate-50 font-medium">중성화수술<i data-lucide="chevron-down" class="w-4 h-4 transition-transform" id="mobile-neutering-icon"></i></button><div id="mobile-neutering-menu" class="hidden bg-slate-50 border-y border-slate-100"><a href="neutering-process.html" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">중성화 수술 과정</a><a href="neutering-micro-incision.html" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">초미세 절개 중성화 수술</a><a href="neutering-cost.html" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">합리적인 수술 비용</a><a href="neutering-care.html" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">수술 후 회복 관리</a><a href="neutering-photos.html" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">중성화 수술 후 사진</a></div></div>
-            <a href="stemcell.html" class="mobile-link px-6 py-3 text-slate-800 hover:bg-slate-50 font-medium">줄기세포/엑소좀 치료(준비중)</a>
-            <div><button id="mobile-community-btn" class="w-full flex justify-between items-center px-6 py-3 text-slate-800 hover:bg-slate-50 font-medium">커뮤니티<i data-lucide="chevron-down" class="w-4 h-4 transition-transform" id="mobile-community-icon"></i></button><div id="mobile-community-menu" class="hidden bg-slate-50 border-y border-slate-100"><a href="notice.html" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">공지사항</a><a href="tv-appearance.html" class="block px-10 py-3 text-sm text-slate-600 hover:text-amber-600">방송출연</a></div></div>
-          </div>
-      </div>
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>합리적인 수술 비용 - 참좋은동물병원</title>
+    <link rel="icon" href="picon.png" type="image/png" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://unpkg.com/lucide@latest"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700;900&family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <script>tailwind.config = {theme: {extend: {fontFamily: {sans: ['"Noto Sans KR"', 'sans-serif'], serif: ['"Playfair Display"', 'serif']}, colors: {primary: '#0f172a', secondary: '#b45309'}}}};</script>
+    <style>.group:hover .group-hover\:block { display: block; }</style>
+</head>
+<body class="bg-slate-50 text-slate-900 font-sans">
+    <header id="main-header" class="fixed top-0 left-0 right-0 z-50 transition-all duration-300 bg-transparent py-6">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="flex justify-between items-center">
+                <div class="flex items-center"><a href="index.html" class="flex items-center gap-2 group"><div id="logo-circle" class="w-10 h-10 rounded-full flex items-center justify-center border-2 transition-colors border-white text-white"><span class="font-serif font-bold text-xl">C</span></div><div class="flex flex-col"><span id="logo-text" class="text-xl font-bold tracking-tight transition-colors text-white">참좋은</span><span id="logo-sub" class="text-xs tracking-widest transition-colors text-slate-200">SPAY AND NEUTER CLINIC</span></div></a></div>
+                <nav class="hidden md:flex items-center space-x-6 lg:space-x-8">
+                    <div class="relative group"><button class="nav-item text-sm font-medium text-white hover:text-amber-500 transition-colors flex items-center gap-1 py-4">병원소개<i data-lucide="chevron-down" class="w-4 h-4"></i></button>
+                        <div class="absolute left-1/2 -translate-x-1/2 pt-2 w-48 hidden group-hover:block"><div class="bg-white rounded-lg shadow-xl overflow-hidden border border-slate-100"><a href="index.html#greetings" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 border-b border-slate-50">인사말</a><a href="clinic-hours.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 border-b border-slate-50">진료시간안내</a><a href="location.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600">찾아오시는길</a></div></div>
+                    </div>
+                    <a href="pricing.html" class="nav-item text-sm font-medium text-white hover:text-amber-500 transition-colors">진료비안내</a>
+                    <div class="relative group"><button class="nav-item text-sm font-bold text-amber-500 transition-colors flex items-center gap-1 py-4">중성화수술<i data-lucide="chevron-down" class="w-4 h-4"></i></button>
+                        <div class="absolute left-1/2 -translate-x-1/2 pt-2 w-48 hidden group-hover:block"><div class="bg-white rounded-lg shadow-xl overflow-hidden border border-slate-100"><a href="neutering-process.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 border-b border-slate-50">중성화 수술 과정</a><a href="neutering-micro-incision.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 border-b border-slate-50">초미세 절개</a><a href="neutering-cost.html" class="block px-4 py-3 text-sm font-bold bg-amber-50 text-amber-700 border-b border-slate-50">합리적인 비용</a><a href="neutering-care.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 border-b border-slate-50">수술 후 회복 관리</a><a href="neutering-photos.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600">수술 후 사진</a></div></div>
+                    </div>
+                    <a href="stemcell.html" class="nav-item text-sm font-medium text-white hover:text-amber-500 transition-colors">줄기세포/엑소좀 치료(준비중)</a>
+                    <div class="relative group"><button class="nav-item text-sm font-medium text-white hover:text-amber-500 transition-colors flex items-center gap-1 py-4">커뮤니티<i data-lucide="chevron-down" class="w-4 h-4"></i></button>
+                        <div class="absolute left-1/2 -translate-x-1/2 pt-2 w-48 hidden group-hover:block"><div class="bg-white rounded-lg shadow-xl overflow-hidden border border-slate-100"><a href="notice.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600 border-b border-slate-50">공지사항</a><a href="tv-appearance.html" class="block px-4 py-3 text-sm text-slate-700 hover:bg-amber-50 hover:text-amber-600">방송출연</a></div></div>
+                    </div>
+                </nav>
+                <button id="mobile-menu-btn" class="md:hidden p-2 text-white"><i data-lucide="menu" class="w-6 h-6"></i></button>
+            </div>
+        </div>
+        <div id="mobile-menu" class="hidden absolute top-full left-0 w-full bg-white shadow-lg md:hidden border-t max-h-[80vh] overflow-y-auto"><div class="flex flex-col py-4"><a href="index.html" class="mobile-link px-6 py-3 text-slate-800 hover:bg-slate-50 font-medium">홈으로</a><a href="neutering-cost.html" class="mobile-link px-6 py-3 text-amber-600 font-bold bg-amber-50">합리적인 비용</a></div></div>
+    </header>
+
+    <main class="pt-0 min-h-screen">
+        <section class="relative h-72 md:h-80 flex items-center justify-center overflow-hidden"><div class="absolute inset-0 z-0"><video autoplay loop muted playsinline class="w-full h-full object-cover"><source src="bground3.mp4" type="video/mp4"></video><div class="absolute inset-0 bg-slate-900/60"></div></div><div class="relative z-10 text-center px-4 pt-20"><h1 class="text-3xl md:text-5xl font-serif font-bold text-white mb-6">합리적인 수술 비용</h1><nav class="flex justify-center items-center gap-2 text-sm text-slate-300"><a href="index.html" class="hover:text-white transition-colors"><i data-lucide="home" class="w-4 h-4"></i></a><i data-lucide="chevron-right" class="w-4 h-4 text-slate-500"></i><span>중성화수술</span><i data-lucide="chevron-right" class="w-4 h-4 text-slate-500"></i><span class="text-amber-400 font-bold">합리적인 비용</span></nav></div></section>
+        <section class="py-24 bg-white"><div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8"><div class="text-center mb-16"><span class="text-amber-600 font-bold tracking-widest text-sm uppercase mb-3 block">Reasonable Price</span><h2 class="text-3xl md:text-4xl font-bold text-slate-900 mb-6">합리적인 <span class="text-amber-700">비용의 비밀</span></h2><p class="text-slate-600 max-w-2xl mx-auto">참좋은동물병원은 불필요한 비용을 줄여 보호자님의 부담을 덜어드립니다.</p></div><div class="grid md:grid-cols-3 gap-8"><div class="bg-white p-10 rounded-2xl shadow-lg border border-slate-100 hover:border-amber-200 hover:-translate-y-2 transition-all duration-300 group"><div class="w-16 h-16 bg-slate-50 rounded-full flex items-center justify-center text-slate-700 mb-8 group-hover:bg-amber-50 group-hover:text-amber-600 transition-colors"><i data-lucide="building" class="w-8 h-8"></i></div><h3 class="text-xl font-bold text-slate-900 mb-4 font-serif">고정 비용의 최소화</h3><p class="text-slate-600 text-sm leading-relaxed">병원 건물 임대료 부담이 없으며, 체계적인 시스템으로 인건비를 효율적으로 운용하여 불필요한 고정 지출을 최소화했습니다. 절감된 비용은 그대로 진료비 인하로 이어집니다.</p></div><div class="bg-white p-10 rounded-2xl shadow-lg border border-slate-100 hover:border-amber-200 hover:-translate-y-2 transition-all duration-300 group"><div class="w-16 h-16 bg-slate-50 rounded-full flex items-center justify-center text-slate-700 mb-8 group-hover:bg-amber-50 group-hover:text-amber-600 transition-colors"><i data-lucide="clipboard-x" class="w-8 h-8"></i></div><h3 class="text-xl font-bold text-slate-900 mb-4 font-serif">불필요한 검사 생략</h3><p class="text-slate-600 text-sm leading-relaxed">과잉 진료를 하지 않습니다. 5세 미만의 건강한 반려동물은 고가의 혈액검사를 강권하지 않고, 수의사의 전문적인 신체검사로 대체하여 무료로 진행합니다.</p></div><div class="bg-white p-10 rounded-2xl shadow-lg border border-slate-100 hover:border-amber-200 hover:-translate-y-2 transition-all duration-300 group"><div class="w-16 h-16 bg-slate-50 rounded-full flex items-center justify-center text-slate-700 mb-8 group-hover:bg-amber-50 group-hover:text-amber-600 transition-colors"><i data-lucide="timer" class="w-8 h-8"></i></div><h3 class="text-xl font-bold text-slate-900 mb-4 font-serif">고도의 수술 효율성</h3><p class="text-slate-600 text-sm leading-relaxed">수만 건의 집도 경험을 바탕으로 수술 시간을 획기적으로 단축했습니다(수컷 5분, 암컷 15분). 빠른 수술은 아이의 마취 부담을 줄이고 병원 회전율을 높여 비용 절감을 가능하게 합니다.</p></div></div><div class="mt-16 bg-slate-50 p-8 rounded-2xl text-center border border-slate-200"><p class="text-slate-700 font-medium mb-4">"저렴하다고 해서 결코 의료의 질이 낮지 않습니다."</p><p class="text-slate-600 text-sm leading-relaxed max-w-2xl mx-auto">참좋은동물병원은 운영의 군더더기를 없애고, 오직 수술 실력과 정직함으로 승부합니다.<br/>합리적인 비용으로 최상의 의료 서비스를 경험해 보세요.</p></div></div></section>
+    </main>
+    
+    <footer id="contact" class="bg-slate-900 text-slate-300">
+        <div class="w-full h-96 bg-slate-200 relative"><iframe title="참좋은동물병원 위치" src="https://maps.google.com/maps?q=경남%20밀양시%20밀양대로%201896&t=&z=16&ie=UTF8&iwloc=&output=embed" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" class="w-full h-full transition-all duration-700" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-16">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-12">
+                <div><h3 class="text-2xl font-serif font-bold text-white mb-6">참좋은동물병원</h3><p class="text-slate-400 text-sm leading-relaxed mb-6">참좋은동물병원은 생명을 존중하는 마음으로 최상의 진료 서비스를 제공합니다.</p></div>
+                <div><h4 class="text-white font-bold mb-6 uppercase tracking-wider text-sm">Contact Us</h4><ul class="space-y-4"><li class="flex items-start gap-3"><i data-lucide="map-pin" class="text-amber-500 mt-1 flex-shrink-0 w-4 h-4"></i><span class="text-sm">경남 밀양시 밀양대로 1896 1층<br/>참좋은동물병원</span></li><li class="flex items-center gap-3"><i data-lucide="phone" class="text-amber-500 flex-shrink-0 w-4 h-4"></i><span class="text-sm">055-351-3581</span></li></ul></div>
+                <div><h4 class="text-white font-bold mb-6 uppercase tracking-wider text-sm">Hours</h4><ul class="space-y-4"><li class="flex items-start gap-3"><i data-lucide="clock" class="text-amber-500 mt-1 flex-shrink-0 w-4 h-4"></i><div class="text-sm"><strong class="text-amber-500 block mb-1">일요일, 공휴일 휴무</strong><span class="block mb-2"></span><strong class="text-white block mb-1">진료시간</strong><span class="block">월 ~ 금 : 오전 10:00 - 오후 06:00</span><span class="block">토요일 : 오전 10:00 - 오후 03:00</span></div></li></ul></div>
+                <div><h4 class="text-white font-bold mb-6 uppercase tracking-wider text-sm">Quick Menu</h4><ul class="space-y-2 text-sm"><li><a href="index.html#greetings" class="hover:text-amber-400 transition-colors">인사말</a></li><li><a href="pricing.html" class="hover:text-amber-400 transition-colors">진료비안내</a></li><li><a href="index.html#neutering" class="hover:text-amber-400 transition-colors">중성화수술</a></li><li><a href="notice.html" class="hover:text-amber-400 transition-colors">커뮤니티</a></li></ul></div>
+            </div>
+            <div class="border-t border-slate-800 mt-16 pt-8 text-center text-xs text-slate-500"><p>© 2026 Chamzeon Spay & Neuter Clinic. All rights reserved.</p><p class="mt-2">사업자등록번호: 615-16-96288 | 대표: 문현철</p></div>
+        </div>
+    </footer>
+    <script>
+      lucide.createIcons();
+      const header = document.getElementById('main-header');
+      const logoCircle = document.getElementById('logo-circle');
+      const logoText = document.getElementById('logo-text');
+      const logoSub = document.getElementById('logo-sub');
+      const navItems = document.querySelectorAll('.nav-item');
+      const mobileMenuBtn = document.getElementById('mobile-menu-btn');
+
+      window.addEventListener('scroll', () => {
+        const isScrolled = window.scrollY > 50;
+        if (isScrolled) {
+            header.classList.remove('bg-transparent', 'py-6');
+            header.classList.add('bg-white/95', 'backdrop-blur-md', 'shadow-md', 'py-3');
+            logoCircle.classList.remove('border-white', 'text-white'); logoCircle.classList.add('border-slate-900', 'text-slate-900');
+            logoText.classList.remove('text-white'); logoText.classList.add('text-slate-900');
+            logoSub.classList.remove('text-slate-200'); logoSub.classList.add('text-slate-600');
+            navItems.forEach(item => {
+                if (item.classList.contains('text-amber-500')) { item.classList.remove('text-amber-500'); item.classList.add('text-amber-600'); }
+                else { item.classList.remove('text-white'); item.classList.add('text-slate-800'); }
+            });
+            mobileMenuBtn.classList.remove('text-white'); mobileMenuBtn.classList.add('text-slate-900');
+        } else {
+            header.classList.add('bg-transparent', 'py-6'); header.classList.remove('bg-white/95', 'backdrop-blur-md', 'shadow-md', 'py-3');
+            logoCircle.classList.add('border-white', 'text-white'); logoCircle.classList.remove('border-slate-900', 'text-slate-900');
+            logoText.classList.add('text-white'); logoText.classList.remove('text-slate-900');
+            logoSub.classList.add('text-slate-200'); logoSub.classList.remove('text-slate-600');
+            navItems.forEach(item => {
+                if (item.classList.contains('text-amber-600')) { item.classList.remove('text-amber-600'); item.classList.add('text-amber-500'); }
+                else { item.classList.add('text-white'); item.classList.remove('text-slate-800'); }
+            });
+            mobileMenuBtn.classList.add('text-white'); mobileMenuBtn.classList.remove('text-slate-900');
+        }
+      });
+      const mobileMenu = document.getElementById('mobile-menu');
+      let isMobileMenuOpen = false;
+      mobileMenuBtn.addEventListener('click', () => { isMobileMenuOpen = !isMobileMenuOpen; mobileMenu.classList.toggle('hidden', !isMobileMenuOpen); });
+      const setupSubmenu = (btnId, menuId, iconId) => { const btn = document.getElementById(btnId); const menu = document.getElementById(menuId); const icon = document.getElementById(iconId); if(btn) { btn.addEventListener('click', () => { menu.classList.toggle('hidden'); icon.classList.toggle('rotate-180'); }); } };
+      setupSubmenu('mobile-about-btn', 'mobile-about-menu', 'mobile-about-icon'); setupSubmenu('mobile-neutering-btn', 'mobile-neutering-menu', 'mobile-neutering-icon'); setupSubmenu('mobile-community-btn', 'mobile-community-menu', 'mobile-community-icon');
+    </script>
+</body>
+</html>
