--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
             <!-- Case 01 -->
             <div class="photo-card group relative overflow-hidden rounded-2xl aspect-square bg-white shadow-sm border border-slate-200 block cursor-pointer">
                 <img src="case01.jpg" alt="수술 사례 1" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110 opacity-90 group-hover:opacity-100" />
-                <div class="absolute inset-0 bg-gradient-to-t from-black/80 via-transparent to-transparent flex flex-col justify-end p-4 md:p-6 opacity-0 group-hover:opacity-100 transition-opacity pointer-events-none">
+                <div class="absolute inset-0 bg-gradient-to-t from-black/80 via-transparent to-transparent flex flex-col justify-end p-4 md:p-6 opacity-100 md:opacity-0 md:group-hover:opacity-100 transition-opacity pointer-events-none">
                     <span class="text-amber-400 text-xs font-bold uppercase tracking-wider mb-1">Cat Case</span>
                     <p class="text-white text-sm font-medium">암컷 코리안숏헤어 (2.4kg)</p>
                     <p class="text-slate-300 text-[10px] mt-1">절개 크기: 약 0.9cm</p>
-                    <div class="mt-2 opacity-0 group-hover:opacity-100 transition-opacity delay-100">
+                    <div class="mt-2 opacity-100 md:opacity-0 md:group-hover:opacity-100 transition-opacity delay-100">
                         <span class="inline-flex items-center gap-1 text-[10px] text-white/80"><i data-lucide="maximize-2" class="w-3 h-3"></i> 크게 보기</span>
                     </div>
                 </div>
@@ -140,11 +140,11 @@
             <!-- Case 02 -->
             <div class="photo-card group relative overflow-hidden rounded-2xl aspect-square bg-white shadow-sm border border-slate-200 block cursor-pointer">
                 <img src="case02.jpg" alt="수술 사례 2" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110 opacity-90 group-hover:opacity-100" />
-                <div class="absolute inset-0 bg-gradient-to-t from-black/80 via-transparent to-transparent flex flex-col justify-end p-4 md:p-6 opacity-0 group-hover:opacity-100 transition-opacity pointer-events-none">
+                <div class="absolute inset-0 bg-gradient-to-t from-black/80 via-transparent to-transparent flex flex-col justify-end p-4 md:p-6 opacity-100 md:opacity-0 md:group-hover:opacity-100 transition-opacity pointer-events-none">
                     <span class="text-amber-400 text-xs font-bold uppercase tracking-wider mb-1">Female Case</span>
                     <p class="text-white text-sm font-medium">1</p>
                     <p class="text-slate-300 text-[10px] mt-1">2</p>
-                    <div class="mt-2 opacity-0 group-hover:opacity-100 transition-opacity delay-100">
+                    <div class="mt-2 opacity-100 md:opacity-0 md:group-hover:opacity-100 transition-opacity delay-100">
                         <span class="inline-flex items-center gap-1 text-[10px] text-white/80"><i data-lucide="maximize-2" class="w-3 h-3"></i> 크게 보기</span>
                     </div>
                 </div>
@@ -154,11 +154,11 @@
             <!-- Case 03 -->
             <div class="photo-card group relative overflow-hidden rounded-2xl aspect-square bg-white shadow-sm border border-slate-200 block cursor-pointer">
                 <img src="case03.jpg" alt="수술 사례 3" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110 opacity-90 group-hover:opacity-100" />
-                <div class="absolute inset-0 bg-gradient-to-t from-black/80 via-transparent to-transparent flex flex-col justify-end p-4 md:p-6 opacity-0 group-hover:opacity-100 transition-opacity pointer-events-none">
+                <div class="absolute inset-0 bg-gradient-to-t from-black/80 via-transparent to-transparent flex flex-col justify-end p-4 md:p-6 opacity-100 md:opacity-0 md:group-hover:opacity-100 transition-opacity pointer-events-none">
                     <span class="text-amber-400 text-xs font-bold uppercase tracking-wider mb-1">Cat Case</span>
                     <p class="text-white text-sm font-medium">1</p>
                     <p class="text-slate-300 text-[10px] mt-1">2</p>
-                    <div class="mt-2 opacity-0 group-hover:opacity-100 transition-opacity delay-100">
+                    <div class="mt-2 opacity-100 md:opacity-0 md:group-hover:opacity-100 transition-opacity delay-100">
                         <span class="inline-flex items-center gap-1 text-[10px] text-white/80"><i data-lucide="maximize-2" class="w-3 h-3"></i> 크게 보기</span>
                     </div>
                 </div>
@@ -168,11 +168,11 @@
             <!-- Case 04 -->
             <div class="photo-card group relative overflow-hidden rounded-2xl aspect-square bg-white shadow-sm border border-slate-200 block cursor-pointer">
                 <img src="case04.jpg" alt="수술 사례 4" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110 opacity-90 group-hover:opacity-100" />
-                <div class="absolute inset-0 bg-gradient-to-t from-black/80 via-transparent to-transparent flex flex-col justify-end p-4 md:p-6 opacity-0 group-hover:opacity-100 transition-opacity pointer-events-none">
+                <div class="absolute inset-0 bg-gradient-to-t from-black/80 via-transparent to-transparent flex flex-col justify-end p-4 md:p-6 opacity-100 md:opacity-0 md:group-hover:opacity-100 transition-opacity pointer-events-none">
                     <span class="text-amber-400 text-xs font-bold uppercase tracking-wider mb-1">Male Case</span>
                     <p class="text-white text-sm font-medium">1</p>
                     <p class="text-slate-300 text-[10px] mt-1">2</p>
-                    <div class="mt-2 opacity-0 group-hover:opacity-100 transition-opacity delay-100">
+                    <div class="mt-2 opacity-100 md:opacity-0 md:group-hover:opacity-100 transition-opacity delay-100">
                         <span class="inline-flex items-center gap-1 text-[10px] text-white/80"><i data-lucide="maximize-2" class="w-3 h-3"></i> 크게 보기</span>
                     </div>
                 </div>
