--- a/neutering-photos.html
+++ b/neutering-photos.html
@@ -56,11 +56,11 @@
             <!-- Case 01 -->
             <div class="photo-card relative group overflow-hidden rounded-2xl aspect-square bg-slate-100 shadow-sm border border-slate-200 cursor-pointer">
                 <img src="case01.jpg" alt="수술 사례 1" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
-                <div class="absolute inset-0 bg-black/60 opacity-0 group-hover:opacity-100 transition-opacity flex flex-col items-center justify-center text-white p-4 text-center pointer-events-none">
+                <div class="absolute inset-0 bg-black/60 opacity-100 md:opacity-0 md:group-hover:opacity-100 transition-opacity flex flex-col items-center justify-center text-white p-4 text-center pointer-events-none">
                     <span class="text-amber-400 text-[10px] font-bold uppercase mb-1">Case 01</span>
                     <p class="text-sm font-bold">암컷 코리안숏헤어 (2.4kg)</p>
                     <p class="text-[10px] text-slate-300 mt-1">절개 크기: 약 0.9cm</p>
-                    <div class="mt-4 opacity-0 group-hover:opacity-100 transition-opacity delay-100">
+                    <div class="mt-4 opacity-100 md:opacity-0 md:group-hover:opacity-100 transition-opacity delay-100">
                         <span class="inline-flex items-center gap-1 text-[10px] bg-white/20 px-2 py-1 rounded-full"><i data-lucide="maximize-2" class="w-3 h-3"></i> 크게 보기</span>
                     </div>
                 </div>
@@ -69,11 +69,11 @@
             <!-- Case 02 -->
             <div class="photo-card relative group overflow-hidden rounded-2xl aspect-square bg-slate-100 shadow-sm border border-slate-200 cursor-pointer">
                 <img src="case02.jpg" alt="수술 사례 2" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
-                <div class="absolute inset-0 bg-black/60 opacity-0 group-hover:opacity-100 transition-opacity flex flex-col items-center justify-center text-white p-4 text-center pointer-events-none">
+                <div class="absolute inset-0 bg-black/60 opacity-100 md:opacity-0 md:group-hover:opacity-100 transition-opacity flex flex-col items-center justify-center text-white p-4 text-center pointer-events-none">
                     <span class="text-amber-400 text-[10px] font-bold uppercase mb-1">Case 02</span>
                     <p class="text-sm font-bold">1</p>
                     <p class="text-[10px] text-slate-300 mt-1">2</p>
-                    <div class="mt-4 opacity-0 group-hover:opacity-100 transition-opacity delay-100">
+                    <div class="mt-4 opacity-100 md:opacity-0 md:group-hover:opacity-100 transition-opacity delay-100">
                         <span class="inline-flex items-center gap-1 text-[10px] bg-white/20 px-2 py-1 rounded-full"><i data-lucide="maximize-2" class="w-3 h-3"></i> 크게 보기</span>
                     </div>
                 </div>
@@ -82,11 +82,11 @@
             <!-- Case 03 -->
             <div class="photo-card relative group overflow-hidden rounded-2xl aspect-square bg-slate-100 shadow-sm border border-slate-200 cursor-pointer">
                 <img src="case03.jpg" alt="수술 사례 3" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
-                <div class="absolute inset-0 bg-black/60 opacity-0 group-hover:opacity-100 transition-opacity flex flex-col items-center justify-center text-white p-4 text-center pointer-events-none">
+                <div class="absolute inset-0 bg-black/60 opacity-100 md:opacity-0 md:group-hover:opacity-100 transition-opacity flex flex-col items-center justify-center text-white p-4 text-center pointer-events-none">
                     <span class="text-amber-400 text-[10px] font-bold uppercase mb-1">Case 03</span>
                     <p class="text-sm font-bold">1</p>
                     <p class="text-[10px] text-slate-300 mt-1">2</p>
-                    <div class="mt-4 opacity-0 group-hover:opacity-100 transition-opacity delay-100">
+                    <div class="mt-4 opacity-100 md:opacity-0 md:group-hover:opacity-100 transition-opacity delay-100">
                         <span class="inline-flex items-center gap-1 text-[10px] bg-white/20 px-2 py-1 rounded-full"><i data-lucide="maximize-2" class="w-3 h-3"></i> 크게 보기</span>
                     </div>
                 </div>
@@ -95,11 +95,11 @@
             <!-- Case 04 -->
             <div class="photo-card relative group overflow-hidden rounded-2xl aspect-square bg-slate-100 shadow-sm border border-slate-200 cursor-pointer">
                 <img src="case04.jpg" alt="수술 사례 4" class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
-                <div class="absolute inset-0 bg-black/60 opacity-0 group-hover:opacity-100 transition-opacity flex flex-col items-center justify-center text-white p-4 text-center pointer-events-none">
+                <div class="absolute inset-0 bg-black/60 opacity-100 md:opacity-0 md:group-hover:opacity-100 transition-opacity flex flex-col items-center justify-center text-white p-4 text-center pointer-events-none">
                     <span class="text-amber-400 text-[10px] font-bold uppercase mb-1">Case 04</span>
                     <p class="text-sm font-bold">1</p>
                     <p class="text-[10px] text-slate-300 mt-1">2</p>
-                    <div class="mt-4 opacity-0 group-hover:opacity-100 transition-opacity delay-100">
+                    <div class="mt-4 opacity-100 md:opacity-0 md:group-hover:opacity-100 transition-opacity delay-100">
                         <span class="inline-flex items-center gap-1 text-[10px] bg-white/20 px-2 py-1 rounded-full"><i data-lucide="maximize-2" class="w-3 h-3"></i> 크게 보기</span>
                     </div>
                 </div>
